# stargate

./: .gitignore  Cargo.toml  LICENSE  README.md  blog.md
examples/: basic_usage.rs  enhanced_hook_detection.rs  function_calling.rs  hook_detection.rs  signature_scanning.rs  silent_call.rs  unhook.rs
src/: comparison.rs  extractor.rs  lib.rs  main.rs  scanner.rs  signature.rs
